test/runnable/imports/test24b.d
module imports.test24b;

public import std.stdio;
