test/fail_compilation/imports/a314.d
module imports.a314;

private static import core.stdc.stdio;
private import io = core.stdc.stdio;
private import core.stdc.stdio : printf;
